chore :  로또, 로또넘버로 네이밍 변경